<resources>
    <string name="app_name">Order Food</string>
    <string name="tendangnhap">Email</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="dangky">Đăng ký</string>
    <string name="pass">Mật khẩu ( >6 ký tự )</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="name">Họ tên</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forgot_pass">ForgotPassActivity</string>


    <string name="title_activity_restaurent">RestaurentActivity</string>

    <string name="facebook_app_id">659139777865159</string>
    <string name="facebook_login_protocol_name">fb659139777865159</string>
</resources>
