<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="90dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"

    android:background="@drawable/food3">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangnhap"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/nabila"
        />

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp">


        <EditText
            android:id="@+id/edtEmailLog"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/mail1"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/tendangnhap"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtPassLog"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/pass1"
            android:drawablePadding="@dimen/size15dp"
            android:hint="@string/pass"
            android:textColorHint="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:singleLine="true"
            android:layout_marginTop="25dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/btnLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@drawable/duongvien_xanh"
                android:text="Đăng nhập"
                android:textSize="20sp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btnThoatLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@drawable/duongvien_nau"
                android:text="Thoát"
                android:textSize="@dimen/size20dp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>