<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="40dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"

    android:background="@drawable/food3">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thêm tài khoản Quán"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/nabila"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">


        <EditText
            android:id="@+id/edtEmailQuan"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/size15dp"
            android:drawableLeft="@drawable/mail1"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/tendangnhap"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPassQuan"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/size15dp"
            android:drawableLeft="@drawable/pass1"
            android:drawablePadding="@dimen/size15dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtTenQuan"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/size15dp"
            android:drawableLeft="@drawable/name1"
            android:drawablePadding="5dp"
            android:hint="Tên quán"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/edtPhoneQuan"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/size15dp"
            android:drawableLeft="@drawable/phone1"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtAddressQuan"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/size15dp"
            android:drawableLeft="@drawable/address1"
            android:drawablePadding="@dimen/size10dp"
            android:hint="Địa chỉ quán"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="65dp">

            <Button
                android:id="@+id/btnThemQuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@drawable/duongvien_xanh"
                android:text="Thêm"

                android:textSize="20sp"
                android:textAllCaps="false"/>


        </LinearLayout>



    </LinearLayout>


</RelativeLayout>

